--- a/index.html
+++ b/index.html
@@ -1,10 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-Hello Page ！gh-pages
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>Document</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<link rel="shortcut icon" href="/bak/img/favicon.jpg" type="image/x-icon">
+		<link rel="stylesheet" href="css/bootstrap.css" media="screen">
+		<link rel="stylesheet" href="css/custom.min.css">
+		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+		<!--[if lt IE 9]>
+      <script src="../bower_components/html5shiv/dist/html5shiv.js"></script>
+      <script src="../bower_components/respond/dest/respond.min.js"></script>
+    <![endif]-->
+
+	</head>
+
+	<body>
+		<div class="navbar navbar-default navbar-fixed-top">
+			<div class="container">
+				<div class="navbar-header">
+					<a href="#" class="navbar-brand">文档说明</a>
+					<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+				</div>
+				<div class="navbar-collapse collapse" id="navbar-main">
+					<ul class="nav navbar-nav">
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown" href="#" id="download">Classify <span class="caret"></span></a>
+							<ul class="dropdown-menu" aria-labelledby="download">
+								<li>
+									<a href="../login.html" target="mycontent">Classify-1</a>
+								</li>
+								<li class="divider"></li>
+								<li>
+									<a href="#">Classify-2</a>
+								</li>
+								<li>
+									<a href="#">Classify-3</a>
+								</li>
+								<li class="divider"></li>
+								<li>
+									<a href="#">Classify-4</a>
+								</li>
+								<li>
+									<a href="#">Classify-5</a>
+								</li>
+								<li class="divider"></li>
+								<li>
+									<a href="#">Classify-6</a>
+								</li>
+								<li>
+									<a href="#">Classify-7</a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a href="../help/">Help</a>
+						</li>
+					</ul>
+
+					<ul class="nav navbar-nav navbar-right">
+						<li>
+							<a href="../welcome/" target="_blank">欢迎：zfldiv@163.com</a>
+						</li>
+						<li>
+							<a href="../login.html">退出</a>
+						</li>
+					</ul>
+
+				</div>
+			</div>
+		</div>
+
+		<div class="container">
+
+			<div class="page-header" id="banner">
+				<div class="row">
+					<div class="col-lg-8 col-md-7 col-sm-6">
+						<h1>开心的孩子</h1>
+						<p class="lead">Your tagline here</p>
+					</div>
+					<div class="col-lg-4 col-md-5 col-sm-6">
+						<div>
+							<h3>这是文章标签</h3></div>
+						<div>
+							<h5>这是文章标签</h5></div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-3 col-md-3 col-sm-4">
+						<div class="list-group table-of-contents">
+							<a class="list-group-item" href="javascript:add('html/vmware/vmware.html')">Bridged（桥接模式）</a>
+							<a class="list-group-item" href="javascript:add('html/zz.html')">测试</a>
+							<a class="list-group-item" href="javascript:add('html/book-guid.html')">文件编辑规则</a>
+							<a class="list-group-item" href="javascript:add('html/mysqljs.html')">Mysqljs</a>
+							<a class="list-group-item" href="javascript:add('html/test.html')">test</a>
+							<a class="list-group-item" href="#navs">Navs</a>
+							<a class="list-group-item" href="#indicators">Indicators</a>
+							<a class="list-group-item" href="#progress-bars">Progress bars</a>
+							<a class="list-group-item" href="#containers">Containers</a>
+							<a class="list-group-item" href="javascript:add('#')">Dialogs</a>
+						</div>
+				</div>
+					<div id="mycontent" class="col-lg-9 col-md-9 col-sm-8">
+					
+						<div>
+							<h2>欢迎来到我的世界。。。</h2></div>
+						
+
+					</div>
+				</div>
+			</div>
+
+			<!-- footer begin -->
+			<footer>
+				<div class="row">
+					<div class="col-lg-12">
+						<ul class="list-unstyled">
+							<li class="pull-right">
+								<a href="#top">Back to top</a>
+							</li>
+							<li>
+								<a href="#" onclick="pageTracker._link(this.href); return false;">Blog</a>
+							</li>
+							<li>
+								<a href="#">RSS</a>
+							</li>
+							<li>
+								<a href="#">Twitter</a>
+							</li>
+							<li>
+								<a href="#">GitHub</a>
+							</li>
+							<li>
+								<a href="#">API</a>
+							</li>
+							<li>
+								<a href="#">Support</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</footer>
+			<!-- footer end -->
+
+		</div>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/custom.js"></script>
+		<script>
+			function add(url) {
+				$.get(url, function(data){
+					$("#mycontent").html(data);
+				});
+			}
+		</script>
+		<script src="js/donghua.js" type="text/javascript"></script>
+	</body>
+
 </html>
